bpo-30389 Adds detection of VS 2017